@@ -1,8 +1,16 @@
-2024-12-23  Charlie Zender  <zender@uci.edu>
+2024-12-28  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.1-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.1-alpha01: Au Revoir Chloe';git push
 	git tag -a 5.3.1-alpha01 -m 'Functionally identical to 5.3.0';git push --tags
+
+	* ncks: Generalize string length dimension size as smallest necessary integral power of 10
+
+2024-12-24  Charlie Zender  <zender@uci.edu>
+
+	* ncks: Add stubs to handle autoconversion in regridder
+
+2024-12-23  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.0 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.0: Awkward Self-Haircut';git push
